@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Add override font to IGUITable
 - IGUITable can now disable the active column.
 - IGUIElement::getElementFromPoint now virtual
 - Fixed issue with wrongly enabled Z-writing for transparent shader materials. Thanks Hendu for this fix.
